# backend/src/main/scala/com/lunatech/iamin/endpoints/package.scala
@@ -1,10 +1,10 @@
 package com.lunatech.iamin
 
-import com.lunatech.iamin.endpoints.definitions.Problem
+import com.lunatech.iamin.endpoints.definitions.ProblemResponseJson
 import org.http4s.Status
 
 package object endpoints {
 
-  def problemOf(status: Status, detail: String): Problem =
-    Problem(status.reason, status.code, detail)
+  def problemOf(status: Status, detail: String): ProblemResponseJson =
+    ProblemResponseJson(status.reason, status.code, detail)
 }
